--- a/ejercicio_tecnico.ipynb
+++ b/ejercicio_tecnico.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Ruta de la carpeta corpus que contiene todos los archivos CSV de las 640 llamadas\n",
-    "ruta_corpus = \"C:/Users/mfreire/OneDrive - Axoft Argentina S.A/Documents/ejercicio/corpus\""
+    "ruta_corpus = \"ejercicio/corpus\""
    ]
   },
   {
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "# Configuración de OpenAI api_key\n",
-    "api_key = \"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\"  # Reemplaza \"tu_api_key\" con tu propia API key\n",
+    "api_key = \"tu_api_key\"  # Reemplaza \"tu_api_key\" con tu propia API key\n",
     "openai.api_key = api_key"
    ]
   },
@@ -223,6 +223,8 @@
     "            \"Tópico conversación\": response.choices[0].message[\"content\"].strip()\n",
     "        })\n",
     "\n",
+    "# Imprime la lista con los resultados de todos esos lotes \n",
+    "# La lista facilita la posterior manipulación de los resultados, de acuerdo a lo que el cliente requiera\n",
     "print(\"\\nRESULTADOS LOTES\\n\",resultados)\n"
    ]
   }
