--- a/ejercicio_tecnico.ipynb
+++ b/ejercicio_tecnico.ipynb
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "# CARGA DE CONVERSACIONES\n",
+    "# CARGA Y LIMPIEZA DE CONVERSACIONES\n",
     "\n",
     "# Crea lista para almacenar el contenido de cada archivo CSV\n",
     "dataframes_consolidados = []\n",
